# jupnotipy

./: LICENCE  README.md  pyproject.toml
jupnotipy/: __init__.py  cli.py  core.py  funny_messages.py  main.py
