[tool.poetry]
name = "jupnotipy"
version = "0.1.1"
description = ""
authors = ["Ilia Kaftanov"]
readme = "README.md"
repository = "https://github.com/IlyaKaftanov/jupnotipy"

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
