[tool.poetry]
name = "jupnotipy"
version = "0.1.4"
description = ""
authors = ["Ilia Kaftanov"]
readme = "README.md"
repository = "https://github.com/IlyaKaftanov/jupnotipy"

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.32.3"

[tool.poetry.scripts]
jupnotipy = 'jupnotipy.cli:main'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
